<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" >

    <data>
        <variable
            name="moviesViewModel"
            type="com.test24i.moviedatabase.models.MovieViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/buttonGetMovies"
                android:layout_marginEnd="@dimen/margin_medium"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fetch_movies_in_last"
	                android:labelFor="@+id/editTextDays" />

                <EditText
	                tools:ignore="Autofill"
	                android:id="@+id/editTextDays"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginStart="@dimen/margin_small"
	                android:layout_marginEnd="@dimen/margin_small"
	                android:gravity="center"
	                android:ems="2"
	                android:inputType="number"
	                android:text="@string/ten" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/days" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonGetMovies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/get_movies"
                android:onClick="getMoviesClicked" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

	    <android.support.v4.widget.SwipeRefreshLayout
		    android:id="@+id/swipeRefreshLayoutMovies"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" >

	        <android.support.v7.widget.RecyclerView
	            android:id="@+id/recyclerViewMovies"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            app:movies="@{moviesViewModel.movies}"/>

	    </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>

</layout>